--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 DATABASE_URL = "mysql://root:1123@localhost:3306/agr"
+
+
+
+
+DATABASE_URL = "mysql://root:I0Hg3HRpemCTcapiqJgb@containers-us-west-2.railway.app:7909/railway"
