--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.3",
     "@prisma/client": "^4.9.0",
     "axios": "^1.2.4",
+    "chart.js": "^4.2.1",
     "D": "^1.0.0",
     "jspdf": "^2.5.1",
     "net": "^1.0.2",
@@ -19,6 +20,7 @@
     "print-js": "^1.6.0",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-pdf": "^6.2.2",
