--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.4",
     "chart.js": "^4.2.1",
     "D": "^1.0.0",
+    "date-fns": "^2.30.0",
     "jspdf": "^2.5.1",
     "net": "^1.0.2",
     "next": "13.1.3",
