--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-pdf": "^6.2.2",
