--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DATABASE_URL = "mysql://root:1123@localhost:3306/orden-compra-agr"
 
 
 
+AWS_ACCESS_KEY_ID="AKIAYBF6VE2HIAOPPQ74"
+AWS_SECRET_ACCESS_KEY="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"
