--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.3",
     "@prisma/client": "^4.9.0",
+    "aws-sdk": "^2.1393.0",
     "axios": "^1.2.4",
     "chart.js": "^4.2.1",
     "D": "^1.0.0",
