--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "chart.js": "^4.2.1",
     "D": "^1.0.0",
     "date-fns": "^2.30.0",
+    "express": "^4.18.2",
     "jspdf": "^2.5.1",
     "net": "^1.0.2",
     "next": "13.1.3",
+    "nodemailer": "^6.9.3",
     "print-js": "^1.6.0",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
